export const snapshot = {};

snapshot[`forge --help 1`] = `
{
  code: 1,
  output: "

Usage:   forge <command> [options] [packages...]
Version: <version>

deno: <version>
v8: <version>
typescript: <version>

Description:

  forge

  A Deno monorepo tool that manages packages on GitHub and JSR, including
  versioning, releases, and compilation. It works on a git repository using
  Conventional Commits.

Options:

  -h, --help     - Show this help.
  -V, --version  - Show the version number for this program.

Commands:

  list       [packages...]  - List packages and versions.
  title      <title>        - Validate pull request titles.
  changelog  [packages...]  - Generate changelogs.
  compile    [packages...]  - Compile packages into binary executables.
  bump       [packages...]  - Bump versions on package config files.
  release    [packages...]  - Creates releases for updated packages.

Examples:

  forge                                 List all packages.
  forge list 'core/*'                   List packages in the 'core' directory.
  forge title 'feat(name): description' Validate PR titles.
  forge changelog --markdown            Generate changelog.
  forge compile --install               Compile and install all binaries.
  forge bump --pr                       Bump versions and create a bump PR.
  forge release --draft                 Create releases with compiled assets.

✘ Test case attempted to exit with exit code: 0
",
}
`;

snapshot[`forge list 1`] = `
{
  code: 0,
  output: "
@scope/package1           0.0.0 → 1.0.0
@scope/package2           2.1.0-pre.1+<hash>
@scope/package3           2.0.0 → 3.0.0
@scope/package4           5.0.0-pre.1+<hash>
@scope/package5           0.0.0 → 0.1.0
@scope/directory/package6 0.0.0
@scope/package7
",
}
`;

snapshot[`forge list --modules [packages...] 1`] = `
{
  code: 0,
  output: "
@scope/package1           0.0.0 → 1.0.0
(default)                 package1/package2.ts
main                      package1/main.ts

@scope/package2           2.1.0-pre.1+<hash>
(default)                 package2/package1.ts

@scope/package3           2.0.0 → 3.0.0
@scope/package4           5.0.0-pre.1+<hash>
@scope/package5           0.0.0 → 0.1.0
@scope/directory/package6 0.0.0
@scope/package7
",
}
`;

snapshot[`forge list [pattern] 1`] = `
{
  code: 0,
  output: "
@scope/package1           0.0.0 → 1.0.0
@scope/package2           2.1.0-pre.1+<hash>
@scope/package3           2.0.0 → 3.0.0
@scope/package4           5.0.0-pre.1+<hash>
@scope/package5           0.0.0 → 0.1.0
@scope/directory/package6 0.0.0
@scope/package7
",
}
`;

snapshot[`forge list [directory]/* 1`] = `
{
  code: 0,
  output: "
No packages found: dir/*
",
}
`;

snapshot[`forge list [unknown] 1`] = `
{
  code: 0,
  output: "
No packages found: unknown
",
}
`;

snapshot[`forge changelog 1`] = `
{
  code: 0,
  output: "
package1@1.0.0

  fix(package1): bug

package2@2.1.0-pre.1+<hash>

  feat(package2): feature
  refactor(package2): rewrite

package3@3.0.0

  docs(package3): fix typo

package4@5.0.0-pre.1+<hash>

  refactor(package4)!: redesign api

package5@0.1.0

  feat(package5): add feature
  chore(package5): bump version

package6@0.0.0

  style(package6): tabs over spaces

",
}
`;

snapshot[`forge changelog --all --emoji 1`] = `
{
  code: 0,
  output: "
package1@1.0.0

  🐛 bug

package2@2.1.0-pre.1+<hash>

  ✨ feature
  ♻️ rewrite

package2@1.0.0

  ✨ package2

package3@3.0.0

  📝 fix typo

package4@5.0.0-pre.1+<hash>

  ♻️ redesign api 💥

package5@0.1.0

  ✨ add feature
  🧹 bump version

package6@0.0.0

  🎨 tabs over spaces

",
}
`;

snapshot[`forge changelog --types <types> 1`] = `
{
  code: 0,
  output: "
package1@1.0.0

  fix(package1): bug

package2@2.1.0-pre.1+<hash>

  feat(package2): feature

package4@5.0.0-pre.1+<hash>

  refactor(package4)!: redesign api

package5@0.1.0

  feat(package5): add feature

",
}
`;

snapshot[`forge changelog --types <types> --no-breaking --all 1`] = `
{
  code: 0,
  output: "
package1@1.0.0

  fix(package1): bug

package2@2.1.0-pre.1+<hash>

  feat(package2): feature

package2@1.0.0

  feat(package2): package2

package5@0.1.0

  feat(package5): add feature

",
}
`;

snapshot[`forge changelog --breaking --markdown 1`] = `
{
  code: 0,
  output: "
## package4@5.0.0-pre.1+<hash>

- refactor(package4)!: redesign api

",
}
`;

snapshot[`forge changelog [unknown] 1`] = `
{
  code: 0,
  output: "
No packages found: unknown
",
}
`;

snapshot[`forge compile --target <target> --bundle --install 1`] = `
{
  code: 0,
  output: "
✓ Compiled package1

  ◆ <directory>/dist/package1/1.0.0/aarch64-unknown-linux-gnu.tar.gz
  ■ Installed package1

",
}
`;

snapshot[`forge compile [unknown] 1`] = `
{
  code: 0,
  output: "
No packages to compile: unknown
",
}
`;

snapshot[`forge bump --release --pr --changelog=<file> --emoji 1`] = `
{
  code: 0,
  output: "
✓ Created bump pull request

  [https://github.com/owner/repo/pulls/1]

",
}
`;

snapshot[`forge bump [unknown] 1`] = `
{
  code: 0,
  output: "
No packages to bump: unknown
",
}
`;

snapshot[`forge release --draft --emoji 1`] = `
{
  code: 0,
  output: "
✓ Created release package1@1.0.0

  [https://github.com/owner/repo/releases/package1@1.0.0]

  ◆ aarch64-unknown-linux-gnu.tar.gz
  ◆ sha256.txt

✓ Created release package3@3.0.0

  [https://github.com/owner/repo/releases/package1@1.0.0]

✓ Created release package5@0.1.0

  [https://github.com/owner/repo/releases/package1@1.0.0]

",
}
`;

snapshot[`forge release [unknown] 1`] = `
{
  code: 0,
  output: "
No packages to release: unknown
",
}
`;

snapshot[`forge title <unscoped> 1`] = `
{
  code: 0,
  output: "

",
}
`;

snapshot[`forge title <scoped> 1`] = `
{
  code: 0,
  output: "

",
}
`;

snapshot[`forge title <unknown> 1`] = `
{
  code: 1,
  output: '
✘ Invalid PR scope: "unknown"

Allowed scopes:

  package1
  package1/main
  package2
  package3
  package4
  package5
  package6
  package7
',
}
`;

snapshot[`forge title <scoped> --types <types> 1`] = `
{
  code: 0,
  output: "

",
}
`;
